# api

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: checks.yml
cookie/: models.py
cookie/_internal/: model_generator.py
