[project]
name = "cookie-api"
description = "An API wrapper for the Cookie API"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = ["discord", "bot", "cookie", "api"]
authors = [
    { name = "tibue99" }, { name="tobfd" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
version = {attr = "cookie.__version__"}
dependencies = {file = "requirements/requirements.txt"}

[project.urls]
GitHub = "https://github.com/CookieAppTeam/api"
Cookie = "https://cookieapp.me"
Documentation = "https://cookie-api.readthedocs.io"
OpenAPI = "https://api.cookieapp.me/docs"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
